# opencv_motion_detector_for_moving_camera

./: CMakeLists.txt  main.cpp
